--- a/estilo.css
+++ b/estilo.css
@@ -35,7 +35,7 @@ p{
     height: 60px;
     border: solid 5px rgb(0, 0, 0);
     background: rgb(255, 229, 35);
-    font-size: 30px;
+    font-size: 200%;
     font-weight: bold;
     margin-top: -50px;
     margin-bottom: -50px;
