--- a/estilo.css
+++ b/estilo.css
@@ -78,3 +78,7 @@ nav li {
     font-family: 'Oswald', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
+
+.botao {
+    margin-bottom: 50px;
+}
