--- a/estilo.css
+++ b/estilo.css
@@ -129,8 +129,8 @@ nav li {
     margin-bottom: 50px;
 }
 .img {
-    -webkit-animation: shadow-drop-2-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: shadow-drop-2-center 0.4s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    -webkit-animation: rotate-center 0.6s ease-in-out both;
+        animation: rotate-center 0.6s ease-in-out both;
 }
 
 /* ----------------------------------------------
@@ -242,4 +242,22 @@ nav li {
         -webkit-transform: scaleX(1);
         transform: scaleX(1);
     }
+}
+.video {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.video1 {
+    box-shadow:
+        1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
+        5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
+        24px 30px 80px rgba(0, 0, 0, 0.16);
+}
+
+.video2 {
+    box-shadow:
+        1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
+        5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
+        24px 30px 80px rgba(0, 0, 0, 0.16);
 }
