--- a/estilo.css
+++ b/estilo.css
@@ -249,6 +249,8 @@ nav li {
 }
 
 .video1 {
+    width: 315;
+        height: 90%;
     box-shadow:
         1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
         5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
@@ -256,6 +258,8 @@ nav li {
 }
 
 .video2 {
+    width: 315;
+        height: 90%;
     box-shadow:
         1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
         5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
