--- a/estilo.css
+++ b/estilo.css
@@ -1,10 +1,24 @@
 body{
-    background: white;
+    background: rgb(136, 136, 136);
     font-family: 'Finlandica', sans-serif;
     font-family: 'Kanit', sans-serif;
     font-family: 'Oswald', sans-serif;
     padding: 0;
     margin: 0;
+    background-image: url(wwdc1.webp);
+        color: white;
+    }
+    
+    .menu-circle {
+        width: 15px;
+        height: 15px;
+        background-color: #f96057;
+        border-radius: 50%;
+        box-shadow: 24px 0 0 0 #f8ce52, 48px 0 0 0 #5fcf65;
+        margin-right: 195px;
+        flex-shrink: 0;
+        margin-bottom: 40px;
+        margin-top: -25px;
 }
 div{
     text-align: center;
@@ -14,27 +28,25 @@ div{
 .img{
     width: 150px;
     height: 150px;
-    border-radius: 100px;
+    border-radius: 10px;
     
 }
 
-h1{
-    color: rgb(0, 0, 0);
+h1 {
     font-size: 30px;
     margin-top: -10px;
 }
 
 p{
     margin-bottom: -20px;
-    color: rgb(0, 0, 0);
     font-size: 20px;
 }
 
 .btn1 {
     width: 80%;
     height: 60px;
-    border: solid 2px rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
+    border: solid 1px rgba(255, 255, 255, 0);
+        background: rgba(255, 255, 255, 0.263);
     font-size: 200%;
     font-weight: bold;
     margin-top: -50px;
@@ -45,8 +57,8 @@ p{
     .btn2 {
         width: 80%;
         height: 60px;
-        border: solid 2px rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
+        border: solid 1px rgba(255, 255, 255, 0);
+            background: rgba(255, 255, 255, 0.263);
         font-size: 200%;
         font-weight: bold;
         margin-top: -50px;
@@ -57,8 +69,8 @@ p{
     .btn3 {
         width: 80%;
         height: 60px;
-        border: solid 2px rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
+        border: solid 1px rgba(255, 255, 255, 0);
+            background: rgba(255, 255, 255, 0.263);
         font-size: 200%;
         font-weight: bold;
         margin-top: -50px;
@@ -89,12 +101,7 @@ a{
 a:hover {
     color: white;
 }
-.imgnav{
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    width: 80px;
-    margin-left: 50px;
-}
+
 
 nav {
     width: 100%;
@@ -251,17 +258,26 @@ nav li {
 .video1 {
     width: 315;
         height: 90%;
-    box-shadow:
-        1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
-        5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
-        24px 30px 80px rgba(0, 0, 0, 0.16);
 }
 
 .video2 {
     width: 315;
         height: 90%;
-    box-shadow:
-        1.6px 2px 5.3px rgba(0, 0, 0, 0.094),
-        5.4px 6.7px 17.9px rgba(0, 0, 0, 0.139),
-        24px 30px 80px rgba(0, 0, 0, 0.16);
+}
+
+.conteudo {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 450px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    background: rgba(255, 255, 255, 0.091);
+    padding: 55px;
+    border-radius: 12px;
+}
+
+@media screen and (max-width: 566px) {
+    .conteudo {
+        max-width: 70%;
+    }
 }
