--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Oswald', sans-serif;
     padding: 0;
     margin: 0;
-    background-image: url(wwdc1.webp);
+    background-image: url(papel-de-parede.jpg);
         color: white;
     }
     
@@ -13,7 +13,7 @@ body{
         width: 15px;
         height: 15px;
         background-color: #f96057;
-        border-radius: 50%;
+        border-radius: 80%;
         box-shadow: 24px 0 0 0 #f8ce52, 48px 0 0 0 #5fcf65;
         margin-right: 195px;
         flex-shrink: 0;
@@ -79,17 +79,17 @@ p{
     }
     
     .btn1:hover {
-        background-color: #ff0000;
+        background-color: #ff7b00;
         transition: 0.5s;
     }
     
     .btn2:hover {
-        background-color: #060505;
+        background-color: #06ac00;
         transition: 0.5s;
     }
     
     .btn3:hover {
-        background-color: #4f4f4f;
+        background-color: #003cff;
         transition: 0.5s;
     }
 
@@ -99,7 +99,7 @@ a{
 }
 
 a:hover {
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 
